Create header section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Landing</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="./sections/header/header.css">
 </head>
 <body>
-
-    <script src="script.js"></script>
+    <div id="header-container"></div>
+    <script src="script.js" defer></script>
 </body>
 </html>
