Create home section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="./sections/header/header.css">
+    <link rel="stylesheet" href="./sections/home-section/home-section.css">
 </head>
 <body>
-    <div id="header-container"></div>
+    <div class="page__header" id="page__header"></div>
+    <main class="page__main" id="page__main"></main>
     <script src="script.js" defer></script>
 </body>
 </html>
