--- a/sections/home-section/home-section.html
+++ b/sections/home-section/home-section.html
@@ -1,7 +1,7 @@
 <section class="hero" id="home">
     <div class="hero__info">
         <h1 class="hero__title">Learn <br class="hero__title-indent">Any Foreign <br class="hero__title-indent"> Language</h1>
-        <img src="./assets/light-bulb.svg" alt="Light Bulb" class="hero__icon">
+        <img src="./sections/home-section/assets/light-bulb.svg" alt="Light Bulb" class="hero__icon">
         <p class="hero__description">
             With our teachers who write a program for 
             each student, you will be able to make your
@@ -10,6 +10,6 @@
         <button class="hero__button">Get started</button>
     </div>
     <div class="hero__image-container">
-        <img src="./assets/home-section-image.svg" alt="Learn Any Foreign Language" class="hero__image">
+        <img src="./sections/home-section/assets/home-section-image.svg" alt="Learn Any Foreign Language" class="hero__image">
     </div>
 </section>
