--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="./sections/header/header.css">
     <link rel="stylesheet" href="./sections/home-section/home-section.css">
+    <link rel="stylesheet" href="./sections/skills-section/skills-section.css">
 </head>
 <body>
     <div class="page__header" id="page__header"></div>
