--- a/sections/header/header.html
+++ b/sections/header/header.html
@@ -1,14 +1,14 @@
 <header class="header">
     <div class="header__logo">Brit<span class="header__logo-span">lex</span></div>
     <nav class="header__menu" aria-label="Main navigation">
-        <a href="#page__main" class="header__link" aria-label="Navigate to Home section">Home</a>
+        <a href="#home" class="header__link" aria-label="Navigate to Home section">Home</a>
         <a href="#skills" class="header__link" aria-label="Navigate to Skills section">Skills</a>
         <a href="#about-us" class="header__link" aria-label="Navigate to About Us section">About Us</a>
         <a href="#pricing" class="header__link" aria-label="Navigate to Pricing section">Pricing</a>
         <a href="#contacts" class="header__link" aria-label="Navigate to Contacts section">Contacts</a>
     </nav>
     <button class="header__button" aria-label="Contact us">Let's Talk</button>
-    <div class="header__burger" aria-label="Open menu">
+    <div class="header__burger">
         <span class="header__burger-button"></span>
     </div>
 </header>
