--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./sections/header/header.css">
     <link rel="stylesheet" href="./sections/home-section/home-section.css">
     <link rel="stylesheet" href="./sections/skills-section/skills-section.css">
+    <link rel="stylesheet" href="./sections/about-us-section/about-us-section.css">
 </head>
 <body>
     <div class="page__header" id="page__header"></div>
