Create pricing section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./sections/home-section/home-section.css">
     <link rel="stylesheet" href="./sections/skills-section/skills-section.css">
     <link rel="stylesheet" href="./sections/about-us-section/about-us-section.css">
+    <link rel="stylesheet" href="./sections/pricing-section/pricing-section.css">
 </head>
 <body>
     <div class="page__header" id="page__header"></div>
