Create contact us section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./sections/skills-section/skills-section.css">
     <link rel="stylesheet" href="./sections/about-us-section/about-us-section.css">
     <link rel="stylesheet" href="./sections/pricing-section/pricing-section.css">
+    <link rel="stylesheet" href="./sections/contact-us-section/contact-us-section.css">
 </head>
 <body>
     <div class="page__header" id="page__header"></div>
