--- a/sections/pricing-section/pricing-section.html
+++ b/sections/pricing-section/pricing-section.html
@@ -1,4 +1,4 @@
-<section class="pricing">
+<section class="pricing" id="pricing">
     <div class="pricing__info">
         <h2 class="pricing__title">Pricing</h2>
     </div>
