Create footer section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="./sections/about-us-section/about-us-section.css">
     <link rel="stylesheet" href="./sections/pricing-section/pricing-section.css">
     <link rel="stylesheet" href="./sections/contact-us-section/contact-us-section.css">
+    <link rel="stylesheet" href="./sections/footer/footer.css">
 </head>
 <body>
     <div class="page__header" id="page__header"></div>
     <main class="page__main" id="page__main"></main>
+    <div class="page__footer" id="page__footer"></div>
     <script src="script.js" defer></script>
 </body>
 </html>
