--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/skills.css">
 </head>
+
 <body>
     <header class="header">
         <div class="header__logo">Brit<span class="header__logo-span">lex</span></div>
@@ -29,10 +32,11 @@
     <main>
         <section class="hero" id="hero">
             <div class="hero__info">
-                <h1 class="hero__title">Learn <br class="hero__title-indent">Any Foreign <br class="hero__title-indent"> Language</h1>
+                <h1 class="hero__title">Learn <br class="hero__title-indent">Any Foreign <br class="hero__title-indent">
+                    Language</h1>
                 <img src="./assets/light-bulb.svg" alt="Light Bulb" class="hero__icon">
                 <p class="hero__description">
-                    With our teachers who write a program for 
+                    With our teachers who write a program for
                     each student, you will be able to make your
                     first sketch after the first lesson.
                 </p>
@@ -55,11 +59,12 @@
                     <div class="skills__offer-info skills__offer-info--speaking">
                         <h3 class="skills__offer-title">Speaking</h3>
                         <p class="skills__offer-description">
-                            Improve your English skills and confidence. 
-                            Live classes and interactive lessons online. 
+                            Improve your English skills and confidence.
+                            Live classes and interactive lessons online.
                             20% extra free for a limited time only
-                            <br><br>
-                            Learn English online and improve your 
+                        </p>
+                        <p class="skills__offer-description">
+                            Learn English online and improve your
                             skills through our high-quality courses
                             and resources – all designed for adult language learners.
                         </p>
@@ -73,9 +78,9 @@
                     <div class="skills__offer-info">
                         <h3 class="skills__offer-title">Writing</h3>
                         <p class="skills__offer-description">
-                            One of the most important and extensive 
-                            areas of natural science, the science that 
-                            studies substances, also their composition 
+                            One of the most important and extensive
+                            areas of natural science, the science that
+                            studies substances, also their composition
                         </p>
                     </div>
                     <button class="skills__offer-button">Learn more</button>
@@ -87,30 +92,32 @@
                     <div class="skills__offer-info">
                         <h3 class="skills__offer-title">Reading</h3>
                         <p class="skills__offer-description">
-                        Perception and response actions of the user
-                        resulting from the use and/or upcoming use 
-                        of the product, system or service
+                            Perception and response actions of the user
+                            resulting from the use and/or upcoming use
+                            of the product, system or service
                         </p>
                     </div>
                     <button class="skills__offer-button">Learn more</button>
                 </div>
                 <div class="skills__offer skills__offer--listening">
                     <div class="skills__offer-image-container skills__offer-image--listening">
-                        <img src="./assets/offer-listening.svg" alt="Podcast audience" class="skills__offer-image skills__image--float">
+                        <img src="./assets/offer-listening.svg" alt="Podcast audience"
+                            class="skills__offer-image skills__image--float">
                     </div>
                     <div class="skills__offer-info skills__offer-info--listening">
                         <h3 class="skills__offer-title">Listening</h3>
                         <p class="skills__offer-description">
-                        Here you can find activities to practice
-                        your listening skills. Listening will help you
-                        to improve your understanding 
+                            Here you can find activities to practice
+                            your listening skills. Listening will help you
+                            to improve your understanding
                         </p>
                     </div>
                     <button class="skills__offer-button">Learn more</button>
                 </div>
             </div>
-        </section>        
+        </section>
     </main>
-    
+
 </body>
+
 </html>
