Create about-us section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/skills.css">
+    <link rel="stylesheet" href="./styles/about-us.css">
 </head>
 
 <body>
@@ -114,6 +115,39 @@
                     </div>
                     <button class="skills__offer-button">Learn more</button>
                 </div>
+            </div>
+        </section>
+
+        <section class="about-us" id="about-us">
+            <h2 class="about-us__title">About Us</h2>
+            <p class="about-us__description">
+                The model offers a framework for discussing problems related to the user's experience, as 
+                well as possible ways and means of solving them. Application development begins at the top 
+                level (strategy), where the future software product is described quite abstractly from the 
+                point of view of the expectations of both users and the customer.
+            </p>
+            <div class="about-us__features">
+                <div class="about-us__feature">
+                    <h3 class="about-us__feature-title">800</h3>
+                    <p class="about-us__feature-description">
+                        Pupils
+                    </p>
+                </div>
+                <div class="about-us__feature">
+                    <h3 class="about-us__feature-title">18</h3>
+                    <p class="about-us__feature-description">
+                        Teachers
+                    </p>
+                </div>
+                <div class="about-us__feature">
+                    <h3 class="about-us__feature-title">6</h3>
+                    <p class="about-us__feature-description">
+                        Foreign languages
+                    </p>
+                </div>
+            </div>
+            <div class="about-us__image-container">
+                <img src="./assets/about-us__image.svg" alt="Business competition" class="about-us__image">
             </div>
         </section>
     </main>
