--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <main>
         <section class="hero" id="hero">
             <div class="hero__info">
-                <h1 class="hero__title">Learn <br class="hero__title-indent">Any Foreign <br class="hero__title-indent">
+                <h1 class="hero__title title">Learn <br class="hero__title-indent">Any Foreign <br class="hero__title-indent">
                     Language</h1>
                 <img src="./assets/light-bulb.svg" alt="Light Bulb" class="hero__icon">
-                <p class="hero__description">
+                <p class="hero__description description">
                     With our teachers who write a program for
                     each student, you will be able to make your
                     first sketch after the first lesson.
@@ -50,7 +50,7 @@
 
         <section class="skills" id="skills">
             <div class="skills__info">
-                <h2 class="skills__title">Skills</h2>
+                <h2 class="skills__title title">Skills</h2>
             </div>
             <div class="skills__offers">
                 <div class="skills__offer skills__offer--speaking">
@@ -59,12 +59,12 @@
                     </div>
                     <div class="skills__offer-info skills__offer-info--speaking">
                         <h3 class="skills__offer-title">Speaking</h3>
-                        <p class="skills__offer-description">
+                        <p class="skills__offer-description description">
                             Improve your English skills and confidence.
                             Live classes and interactive lessons online.
                             20% extra free for a limited time only
                         </p>
-                        <p class="skills__offer-description">
+                        <p class="skills__offer-description description">
                             Learn English online and improve your
                             skills through our high-quality courses
                             and resources – all designed for adult language learners.
@@ -78,7 +78,7 @@
                     </div>
                     <div class="skills__offer-info">
                         <h3 class="skills__offer-title">Writing</h3>
-                        <p class="skills__offer-description">
+                        <p class="skills__offer-description description">
                             One of the most important and extensive
                             areas of natural science, the science that
                             studies substances, also their composition
@@ -92,7 +92,7 @@
                     </div>
                     <div class="skills__offer-info">
                         <h3 class="skills__offer-title">Reading</h3>
-                        <p class="skills__offer-description">
+                        <p class="skills__offer-description description">
                             Perception and response actions of the user
                             resulting from the use and/or upcoming use
                             of the product, system or service
@@ -107,7 +107,7 @@
                     </div>
                     <div class="skills__offer-info skills__offer-info--listening">
                         <h3 class="skills__offer-title">Listening</h3>
-                        <p class="skills__offer-description">
+                        <p class="skills__offer-description description">
                             Here you can find activities to practice
                             your listening skills. Listening will help you
                             to improve your understanding
@@ -119,8 +119,8 @@
         </section>
 
         <section class="about-us" id="about-us">
-            <h2 class="about-us__title">About Us</h2>
-            <p class="about-us__description">
+            <h2 class="about-us__title title">About Us</h2>
+            <p class="about-us__description description">
                 The model offers a framework for discussing problems related to the user's experience, as 
                 well as possible ways and means of solving them. Application development begins at the top 
                 level (strategy), where the future software product is described quite abstractly from the 
