--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/skills.css">
     <link rel="stylesheet" href="./styles/about-us.css">
+    <link rel="stylesheet" href="./styles/pricing.css">
 </head>
 
 <body>
@@ -44,7 +45,7 @@
                 <button class="hero__button">Get started</button>
             </div>
             <div class="hero__image-container">
-                <img src="./assets/hero-image.svg" alt="Learn Any Foreign Language" class="hero__image">
+                <img src="./assets/hero-image.svg" alt="Learn Any Foreign Language" class="image hero__image">
             </div>
         </section>
 
@@ -55,7 +56,7 @@
             <div class="skills__offers">
                 <div class="skills__offer skills__offer--speaking">
                     <div class="skills__offer-image-container skills__offer-image--speaking">
-                        <img src="./assets/offer-speaking.svg" alt="Shared goals" class="skills__offer-image">
+                        <img src="./assets/offer-speaking.svg" alt="Shared goals" class="image skills__offer-image">
                     </div>
                     <div class="skills__offer-info skills__offer-info--speaking">
                         <h3 class="skills__offer-title">Speaking</h3>
@@ -74,7 +75,7 @@
                 </div>
                 <div class="skills__offer skills__offer--writing">
                     <div class="skills__offer-image-container skills__offer-image--writing">
-                        <img src="./assets/offer-writing.svg" alt="Typewriter" class="skills__offer-image">
+                        <img src="./assets/offer-writing.svg" alt="Typewriter" class="image skills__offer-image">
                     </div>
                     <div class="skills__offer-info">
                         <h3 class="skills__offer-title">Writing</h3>
@@ -88,7 +89,7 @@
                 </div>
                 <div class="skills__offer skills__offer--reading">
                     <div class="skills__offer-image-container skills__offer-image--reading">
-                        <img src="./assets/offer-reading.svg" alt="House bookshelves" class="skills__offer-image">
+                        <img src="./assets/offer-reading.svg" alt="House bookshelves" class="image skills__offer-image">
                     </div>
                     <div class="skills__offer-info">
                         <h3 class="skills__offer-title">Reading</h3>
@@ -103,7 +104,7 @@
                 <div class="skills__offer skills__offer--listening">
                     <div class="skills__offer-image-container skills__offer-image--listening">
                         <img src="./assets/offer-listening.svg" alt="Podcast audience"
-                            class="skills__offer-image skills__image--float">
+                            class="image skills__offer-image skills__image--float">
                     </div>
                     <div class="skills__offer-info skills__offer-info--listening">
                         <h3 class="skills__offer-title">Listening</h3>
@@ -147,7 +148,77 @@
                 </div>
             </div>
             <div class="about-us__image-container">
-                <img src="./assets/about-us__image.svg" alt="Business competition" class="about-us__image">
+                <img src="./assets/about-us__image.svg" alt="Business competition" class="image about-us__image">
+            </div>
+        </section>
+
+        <section class="pricing" id="pricing">
+            <div class="pricing__info">
+                <h2 class="title pricing__title">Pricing</h2>
+            </div>
+            <div class="pricing__list">
+                <div class="pricing__item">
+                    <div class="pricing__item-image--test">
+                        <img src="./assets/self-study-online-course.svg" alt="Online test" class="image pricing__item-image">
+                    </div>
+                    <div class="pricing__item-info">
+                        <h3 class="pricing__item-title">Self-study online course</h3>
+                        <p class="text pricing__item-description">
+                        Start learning English online in live classes
+                        with qualified EC teachers and students 
+                        from all over the world.
+                        </p>
+                    </div>
+                    <div class="pricing__item-price">
+                        <p class="pricing__item-cost"> 
+                            <span class="pricing__item-cost--span">
+                                £5.99
+                            </span>
+                            per month
+                        </p>  
+                    </div>   
+                </div>
+                <div class="pricing__item">
+                    <div class="pricing__item-image--lesson">
+                        <img src="./assets/live-online-classes.svg" alt="Lesson" class="image pricing__item-image">
+                    </div>
+                    <div class="pricing__item-info">
+                        <h3 class="pricing__item-title">Live online classes</h3>
+                        <p class="text pricing__item-description">
+                            Interactive group classes with expert
+                            teachers. Free 7-day trial
+                        </p>
+                    </div>
+                    <div class="pricing__item-price">
+                        <p class="pricing__item-cost"> 
+                            <span class="pricing__item-cost--span">
+                                £12.99
+                            </span>
+                            per month
+                        </p>  
+                    </div>
+                </div>
+                <div class="pricing__item">
+                    <div class="pricing__item-image--webinar">
+                        <img src="./assets/personal-tuition.svg" alt="Webinar" class="image pricing__item-image">
+                    </div>
+                    <div class="pricing__item-info">
+                        <h3 class="pricing__item-title">Personal Tuition</h3>
+                        <p class="text pricing__item-description">
+                            Online one-to-one English tutoring – enjoy
+                            our first session for only $1
+                        </p>
+                    </div>
+                    <div class="pricing__item-price">
+                        <p class="pricing__item-cost">
+                            <span class="pricing__item-cost--span">
+                                £20.99
+                            </span>
+                            per month
+                        </p>  
+                    </div>
+                    
+                </div>
             </div>
         </section>
     </main>
