--- a/index.html
+++ b/index.html
@@ -171,14 +171,17 @@
                         from all over the world.
                         </p>
                     </div>
-                    <div class="pricing__item-price">
-                        <p class="pricing__item-cost"> 
-                            <span class="pricing__item-cost--span">
+                    <div class="pricing__item-container">
+                        <div class="pricing__item-price">
+                            <span class="pricing__item-cost">
                                 £5.99
                             </span>
-                            per month
-                        </p>  
-                    </div>   
+                            <span class="pricing__item-frequency"> 
+                                per month
+                            </span>
+                        </div>   
+                    </div>
+                    
                 </div>
                 <div class="pricing__item">
                     <div class="pricing__item-image--lesson">
@@ -191,14 +194,16 @@
                             teachers. Free 7-day trial
                         </p>
                     </div>
-                    <div class="pricing__item-price">
-                        <p class="pricing__item-cost"> 
-                            <span class="pricing__item-cost--span">
+                    <div class="pricing__item-container">
+                        <div class="pricing__item-price">
+                            <span class="pricing__item-cost">
                                 £12.99
                             </span>
-                            per month
-                        </p>  
-                    </div>
+                            <span class="pricing__item-frequency"> 
+                                per month
+                            </span>
+                        </div>
+                    </div>  
                 </div>
                 <div class="pricing__item">
                     <div class="pricing__item-image--webinar">
@@ -211,15 +216,16 @@
                             our first session for only $1
                         </p>
                     </div>
-                    <div class="pricing__item-price">
-                        <p class="pricing__item-cost">
-                            <span class="pricing__item-cost--span">
+                    <div class="pricing__item-container">
+                        <div class="pricing__item-price">
+                            <span class="pricing__item-cost">
                                 £20.99
                             </span>
-                            per month
-                        </p>  
+                            <span class="pricing__item-frequency"> 
+                                per month
+                            </span>
+                        </div>    
                     </div>
-                    
                 </div>
             </div>
         </section>
